--- a/aneganov/mf_lib/TODO
+++ b/aneganov/mf_lib/TODO
@@ -1,7 +1,5 @@
-1. Change chunk finding algorithm and replace hashtable by rb tree
-2. Add search for chunk by ptr
-3. Complete mapped_file.c
-4. Iterator
-5. Logging everywhere
-6. Unuttests for all components
-7. Tests
+1. Logging everywhere
+2. Unuttests for all components
+3. Tests
+4. Improvements for algorithms
+5. Multithreading
