--- a/aneganov/mf_lib/TODO
+++ b/aneganov/mf_lib/TODO
@@ -1,5 +1,2 @@
-1. Logging everywhere
-2. Unuttests for all components
-3. Tests
-4. Improvements for algorithms
-5. Multithreading
+1. Performance tests
+2. Multithreading
