enlarge font in plots

--- a/tester/test_results.ipynb
+++ b/tester/test_results.ipynb
@@ -52,14 +52,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Raw results.\n",
-    "With mean and std."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -88,12 +80,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "data"
+    "tests = set(data['testid'].tolist())\n",
+    "libs = set(data['lib'].tolist())"
    ]
   },
   {
@@ -109,16 +101,37 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# sns.set_style(\"whitegrid\")\n",
+    "sns.set(font_scale=5)\n",
     "tests = set(data['testid'].tolist())\n",
     "for test in tests: \n",
+    "    plt.figure(figsize=(45,10))\n",
     "    ax = sns.barplot(x=\"lib\", y=\"mean\", data=data[data[\"testid\"] == test])\n",
-    "    sns.plt.title(test, fontsize=20)\n",
+    "    sns.plt.title(test, fontsize=100)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Raw results \n",
+    "with mean and std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data"
    ]
   },
   {
@@ -132,7 +145,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 2",
-   "language": "python2",
+   "language": "python",
    "name": "python2"
   },
   "language_info": {
