--- a/tester/test_results.ipynb
+++ b/tester/test_results.ipynb
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -73,19 +74,50 @@
     "values = [i for i in range(10)]\n",
     "data[\"mean\"] = data[values].mean(axis=1)\n",
     "data[\"std\"]  = data[values].std(axis=1)\n",
-    "data[\"testid\"] = data[\"test\"] + \"_\" + data[\"test_name\"]"
+    "data[\"testid\"] = data[\"test\"] + \"_\" + data[\"test_name\"]\n",
+    "tests = set(data['testid'].tolist())\n",
+    "libs = set(data['lib'].tolist())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Passed and Failed tests"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "tests = set(data['testid'].tolist())\n",
-    "libs = set(data['lib'].tolist())"
+    "passedf = pd.DataFrame(index=libs, columns=tests).fillna(0)\n",
+    "\n",
+    "dataslice = data[['lib', 'testid']]\n",
+    "for index, row in dataslice.iterrows():\n",
+    "    passedf.set_value(row['lib'], row['testid'], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "sns.set(font_scale=2)\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "row_labels = libs\n",
+    "col_labels = tests\n",
+    "plt.figure(figsize=(20,10))\n",
+    "plt.imshow(passedf, interpolation='none', vmin=0, vmax=1)\n",
+    "plt.xticks(range(len(tests)), col_labels, rotation=90)\n",
+    "plt.yticks(range(len(libs)), row_labels)\n",
+    "plt.show()"
    ]
   },
   {
@@ -107,11 +139,11 @@
    "source": [
     "# sns.set_style(\"whitegrid\")\n",
     "sns.set(font_scale=5)\n",
-    "tests = set(data['testid'].tolist())\n",
     "for test in tests: \n",
     "    plt.figure(figsize=(45,10))\n",
     "    ax = sns.barplot(x=\"lib\", y=\"mean\", data=data[data[\"testid\"] == test])\n",
     "    sns.plt.title(test, fontsize=100)\n",
+    "    ax.set(xlabel='', ylabel='mean time')\n",
     "    plt.show()"
    ]
   },
@@ -131,6 +163,7 @@
    },
    "outputs": [],
    "source": [
+    "pd.set_option('display.max_rows', len(data))\n",
     "data"
    ]
   },
