add colors for heatmap

--- a/tester/test_results.ipynb
+++ b/tester/test_results.ipynb
@@ -94,11 +94,11 @@
    },
    "outputs": [],
    "source": [
-    "passedf = pd.DataFrame(index=libs, columns=tests).fillna(0)\n",
+    "passedf = pd.DataFrame(index=libs, columns=tests).fillna(4.5)\n",
     "\n",
     "dataslice = data[['lib', 'testid']]\n",
     "for index, row in dataslice.iterrows():\n",
-    "    passedf.set_value(row['lib'], row['testid'], 1)"
+    "    passedf.set_value(row['lib'], row['testid'], 2)"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "row_labels = libs\n",
     "col_labels = tests\n",
     "plt.figure(figsize=(20,10))\n",
-    "plt.imshow(passedf, interpolation='none', vmin=0, vmax=1)\n",
+    "plt.imshow(passedf, interpolation='none', vmin=0, vmax=5, cmap=\"spectral\")\n",
     "plt.xticks(range(len(tests)), col_labels, rotation=90)\n",
     "plt.yticks(range(len(libs)), row_labels)\n",
     "plt.show()"
