replace bar plots to box plots for better visibility

--- a/tester/test_results.ipynb
+++ b/tester/test_results.ipynb
@@ -8,6 +8,19 @@
    },
    "outputs": [],
    "source": [
+    "# consts\n",
+    "# number of iterations:\n",
+    "times = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -60,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"test_result.txt\", sep=' ', header=None, names=[\"lib\", 'test', 'test_name'] + [i for i in range(10)])"
+    "data = pd.read_csv(\"test_result.txt\", sep=' ', header=None, names=[\"lib\", 'test', 'test_name'] + [i for i in range(times)])"
    ]
   },
   {
@@ -71,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "values = [i for i in range(10)]\n",
+    "values = [i for i in range(times)]\n",
     "data[\"mean\"] = data[values].mean(axis=1)\n",
     "data[\"std\"]  = data[values].std(axis=1)\n",
     "data[\"testid\"] = data[\"test\"] + \"_\" + data[\"test_name\"]\n",
@@ -114,6 +127,7 @@
     "row_labels = libs\n",
     "col_labels = tests\n",
     "plt.figure(figsize=(20,10))\n",
+    "plt.title(\"Test passage\", fontsize=100,  y=1.04)\n",
     "plt.imshow(passedf, interpolation='none', vmin=0, vmax=5, cmap=\"spectral\")\n",
     "plt.xticks(range(len(tests)), col_labels, rotation=90)\n",
     "plt.yticks(range(len(libs)), row_labels)\n",
@@ -137,13 +151,15 @@
    },
    "outputs": [],
    "source": [
-    "# sns.set_style(\"whitegrid\")\n",
-    "sns.set(font_scale=5)\n",
-    "for test in tests: \n",
-    "    plt.figure(figsize=(45,10))\n",
-    "    ax = sns.barplot(x=\"lib\", y=\"mean\", data=data[data[\"testid\"] == test])\n",
-    "    sns.plt.title(test, fontsize=100)\n",
-    "    ax.set(xlabel='', ylabel='mean time')\n",
+    "val = data.set_index(data[\"testid\"]).drop([\"test\", \"test_name\", \"mean\", \"std\", 'testid'], axis=1)\n",
+    "sns.set(font_scale=4)\n",
+    "for test in tests:\n",
+    "    plt.figure(figsize=(45, 15))\n",
+    "    sns.plt.title(test, fontsize=100, y=1.03)\n",
+    "    a = val[val.index == test]\n",
+    "    a = a.set_index(a['lib']).drop([\"lib\"], axis=1).transpose()\n",
+    "    ax = sns.boxplot(data=a)\n",
+    "    sns.swarmplot(data=a, size=15, ax=ax)\n",
     "    plt.show()"
    ]
   },
@@ -164,7 +180,7 @@
    "outputs": [],
    "source": [
     "pd.set_option('display.max_rows', len(data))\n",
-    "data"
+    "data.drop(values, axis=1)"
    ]
   },
   {
