--- a/tester/par_test_results.ipynb
+++ b/tester/par_test_results.ipynb
@@ -84,14 +84,7 @@
     "    testf = datarank[datarank.testid == test]\n",
     "    for index, row in testf.iterrows():\n",
     "        if row.time != -1:     \n",
-    "            ranks.set_value(row['lib'], row['testid'], ranks.loc[row['lib']][row['testid']] + 1)\n",
-    "\n",
-    "# ranks['All test passed'] = np.zeros(len(libs))\n",
-    "# all_passed = ranks[ranks <= p_timeout].any(axis=1)\n",
-    "# \n",
-    "# for i, item in all_passed.iteritems():\n",
-    "#     if item == False: \n",
-    "#         ranks.set_value(i, 'All test passed', p_all_passed) "
+    "            ranks.set_value(row['lib'], row['testid'], ranks.loc[row['lib']][row['testid']] + 1)"
    ]
   },
   {
